@@ -12,9 +12,14 @@
 				<span><?php echo wp_kses_post($data['title']); ?></span>
 			</legend>
 
-			<select class="<?php echo esc_attr($data['class']); ?>" id="nuvei_block_pms_multiselect">
+            <select class="<?php echo esc_attr($data['class']); ?>" 
+                    id="nuvei_block_pms_multiselect" 
+                    onchange="nuveiDisablePm(this.value)"
+            >
 				<?php foreach ($data['merchant_pms'] as $val => $name) : ?>
-					<option value="<?php echo esc_attr($val); ?>" <?php if (in_array($val, $data['nuvei_blocked_pms'])) : ?> style="display: none;"<?php endif; ?>><?php echo wp_kses_post($name); ?></option>
+					<option value="<?php echo esc_attr($val); ?>" 
+                            id="nuvei_block_pm_<?php echo esc_attr($val); ?>" 
+                            <?php if (in_array($val, $data['nuvei_blocked_pms'])) : ?> style="display: none;"<?php endif; ?>><?php echo wp_kses_post($name); ?></option>
 				<?php endforeach; ?>
 			</select>
 			<br/>
