@@ -4,6 +4,7 @@
     * Added support for theme picking for SimplyConnect.
     * Added option to save logs into second log file - nuvei.log.
     * Removed the "SDK Version" option into the plugin.
+    * Fixed the problem with Chrome and plugin "Block Payment methods" dropdown.
     * Replaced safecharge domain into the endpoints with nuvei one, where is possible.
     * Split the requests response log.
 
